[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.build_meta"

[project]
name = "pulsetransit"
version = "0.1.0"
description = "TUS Santander bus data pipeline and delay prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
