[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsetransit"
version = "0.2.0"
description = "TUS Santander bus data pipeline and delay prediction"
readme = "README.md"
dependencies = [
    "pandas",
    "plotly",
    "streamlit",
    "streamlit_js_eval",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
